# openapi.yaml
@@ -22,6 +22,45 @@ paths:
                   $ref: '#/components/schemas/Bank'
         '500':
           description: Internal server error
+    post:
+      summary: Create a new bank
+      description: |
+        Create a new bank entry.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewBank'
+      responses:
+        '201':
+          description: Bank created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Bank'
+        '500':
+          description: Internal server error
+  /currencies:
+    post:
+      summary: Create a new currency
+      description: |
+        Create a new currency entry.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/NewCurrency'
+      responses:
+        '201':
+          description: Currency created successfully
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Currency'
+        '500':
+          description: Internal server error
 components:
   schemas:
     Bank:
@@ -34,3 +73,31 @@ components:
         name:
           type: string
           description: The name of the bank.
+    Currency:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+          description: The ID of the currency.
+        name:
+          type: string
+          description: The name of the currency.
+        symbol:
+          type: string
+          description: The symbol of the currency.
+    NewBank:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The name of the new bank.
+    NewCurrency:
+      type: object
+      properties:
+        name:
+          type: string
+          description: The name of the new currency.
+        symbol:
+          type: string
+          description: The symbol of the new currency.
